--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,8 @@
     ],
     "allowJs": true,
     "declaration": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*"
