--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "moduleResolution": "node",
+    // "allowSyntheticDefaultImports": true,
     "outDir": "./dist",
     "baseUrl": "./",
     "resolveJsonModule": true,
