--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,8 @@ edition = "2021"
 
 [dependencies]
 aerostream = "*"
+anyhow = "1.0.80"
 chrono = "0.4.34"
-tokio = "1.36.0"
+serde = "1.0.197"
+serde_json = "1.0.114"
+tokio = { version = "1.36.0", features = ["full"] }
